--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Home/Shop.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Home/Shop.html
@@ -13,12 +13,12 @@
 
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
-    <div tabindex="0"> 
-        <a href="../../Home/index.html" class="active" id="home">Home</a> 
+    <div >
+        <a href="../../Home/index.html" class="active" id="home" tabindex="1">Home</a>
     </div>
-    <div class="dropdown" tabindex="0">
+    <div class="dropdown">
         <div class="dropbtn"> 
-            <a href="../Home/Shop.html" id="Packages"> Packages </a>
+            <a href="../Home/Shop.html" id="Packages" tabindex="2"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
@@ -28,9 +28,9 @@
             <a href="../Sport/Sport.html" id="Sport">Sport</a>
         </div>
     </div>
-    <div class="dropdown" tabindex="0">
+    <div class="dropdown" >
         <div class="dropbtn"> 
-            <a href="../../About%20the%20region/Description/Description.html" > About the region </a>
+            <a href="../../About%20the%20region/Description/Description.html" tabindex="3"> About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
@@ -40,19 +40,15 @@
             <a href="../../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
         </div>
     </div>
-    <div tabindex="0">
-        <a href="../../AboutUs/AboutUs.html" id="About">About us</a> 
-    </div>
-    <div tabindex="0">
-        <a href="../../Contact%20Us/Contact.html" id="Contact">Contact us</a> 
-    </div>
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
+        <a href="../../AboutUs/AboutUs.html" id="About" tabindex="4">About us</a>
+        <a href="../../Contact%20Us/Contact.html" id="Contact" tabindex="5">Contact us</a>
+       <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
 
-<header tabindex="0">
+<header >
     <ul class="breadcrumb">
-        <li tabindex="0">
-            <a href="../../Home/index.html">Home</a>
+        <li>
+            <a href="../../Home/index.html" tabindex="6">Home</a>
         </li>
         <li>Packages</li>
     </ul>
@@ -60,37 +56,37 @@
 
 <!-- Section A -->
 <main class="Wrapper1" id="main" >
-    <div class="boxe boxe1" tabindex="0">
+    <div class="boxe boxe1">
         <div> <u>P</u>romotion and Special Offers</div>
         <div> 
-            <a href="../Special%20offers/SpecialOffers.html" class="linken" accesskey="p" > 
+            <a href="../Special%20offers/SpecialOffers.html" class="linken" accesskey="p" tabindex="7">
             <img src="../../../img/Neuer%20Ordner/cucumber.svg" alt=""  class="cucumber" > </a> 
         </div>
     </div>
-    <div class="boxe boxe2" tabindex="0">
+    <div class="boxe boxe2">
         <div> <u>D</u>aytrip </div>
         <div> 
-            <a href="../Dailytrip/Dailytrip.html" class="linken" accesskey="d"> <img src="../../../img/Neuer%20Ordner/cucumber-2.svg" alt=""  class="cucumber" >
+            <a href="../Dailytrip/Dailytrip.html" class="linken" accesskey="d" tabindex="8"> <img src="../../../img/Neuer%20Ordner/cucumber-2.svg" alt=""  class="cucumber" >
             </a> 
         </div>
     </div>
-    <div class="boxe boxe3" tabindex="0" >
+    <div class="boxe boxe3" >
         <div><u>H</u>olidays </div>
         <div>
-            <a href="../Hollydays/Hollydays.html" class="linken" accesskey="h" > <img src="../../../img/Neuer%20Ordner/cucumber-5.svg" alt=""  class="cucumber" > </a>
+            <a href="../Hollydays/Hollydays.html" class="linken" accesskey="h" tabindex="9"> <img src="../../../img/Neuer%20Ordner/cucumber-5.svg" alt=""  class="cucumber" > </a>
         </div>
     </div>
-    <div class="boxe boxe4" tabindex="0">
+    <div class="boxe boxe4">
         <div> <u>S</u>port </div>
         <div>
-            <a  href="../Sport/Sport.html" class="linken" accesskey="s" >  <img src="../../../img/Neuer%20Ordner/cucumber-4.svg" alt=""  class="cucumber" > </a>
+            <a  href="../Sport/Sport.html" class="linken" accesskey="s" tabindex="10">  <img src="../../../img/Neuer%20Ordner/cucumber-4.svg" alt=""  class="cucumber" > </a>
         </div>
     </div>
 </main>
 
 <!-- Section B -->
 <div >
-    <section id="section-d" class="grid" tabindex="0">
+    <section id="section-d" class="grid" >
         <div class="box" vocab="http://schema.org/">
             <h2 class="content-title">Contact Us</h2>
             <p typeof="Organization">
@@ -121,16 +117,16 @@
 
     <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
     <ul class="socicons-list">
-        <li tabindex="0">
-            <a href='#' target='_blank' >
+        <li >
+            <a href='#' target='_blank' tabindex="11" >
                 <span class="socicon-facebook"></span>
             </a>
         </li>
-        <li tabindex="0">
-            <a href="../../Shop/Home/Shop.html" > Packages </a>
+        <li >
+            <a href="../../Shop/Home/Shop.html" tabindex="12"> Packages </a>
         </li>
-        <li tabindex="0">
-            <a href='#' target='_blank'>
+        <li >
+            <a href='#' target='_blank' tabindex="13">
                 <span class="socicon-instagram"></span>
             </a>
         </li>
