--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/AboutUs/AboutUs.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/AboutUs/AboutUs.html
@@ -38,7 +38,7 @@
             <a href="../About%20the%20region/Description/Description.html" id="Description">Description </a>
             <a href="../About%20the%20region/Foto/Foto.html" id="fotos">Photos</a>
             <a href="../About%20the%20region/Video/video.html" id="video">Video</a>
-            <a href="#">Wallpaper</a>
+            <a href="../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
         </div>
     </div>
 
